tools/tests/errors/surf_lib_19.experr
invalid base64 character
